--- a/index.html
+++ b/index.html
@@ -169,80 +169,88 @@
 <body>
 
     <header>
-        <h1>John Smith</h1>
-        <p>Senior Business Analyst specializing in Data Warehousing, Visualisation, and Supply Chain Logistics.</p>
+        <h1>Will Kong</h1>
+        <p>Senior Business Analyst specializing in Snowflake and Qlik Sense.</p>
     </header>
 
     <div class="container">
         <div class="portfolio-grid">
 
             <!-- PROJECT 1 -->
-            <div class="card">
-                <div class="card-image-container">
-                    <!-- Replace src with your image file name -->
-                    <img src="project1.png" alt="Sales Dashboard" class="card-image">
-                </div>
-                <div class="card-content">
-                    <div class="card-tags">
-                        <span class="tag green">Qlik Sense</span>
-                        <span class="tag blue">Snowflake</span>
+            <a href="case-study-1.html" style="text-decoration: none;"> 
+                <div class="card">
+                    <div class="card-image-container">
+                        <img src="images/p1-main.png" alt="Sales Dashboard" class="card-image">
                     </div>
-                    <h3 class="card-title">Commercial Sales Performance</h3>
-                    <p class="card-desc">A comprehensive view of margin analysis across domestic and export markets. Features custom CSS KPI objects and dynamic set analysis for Year-over-Year comparison.</p>
+                    <div class="card-content">
+                        <div class="card-tags">
+                            <span class="tag green">Qlik Sense</span>
+                            <span class="tag blue">Snowflake</span>                         
+                            <span class="tag grey">Sales API</span>
+                        </div>
+                        <h3 class="card-title">Public Benchmarking and Pricing Analytics</h3>
+                        <p class="card-desc">"Benchmarking internal performance against the market. A data pipeline integrating Argus public indices with sales data to provide a 'Price vs. Market' index for strategic pricing."</p> <!-- Updated Text -->
+                    </div>
                 </div>
-            </div>
-
+            </a>
             <!-- PROJECT 2 -->
-            <div class="card">
-                <div class="card-image-container">
-                    <img src="project2.png" alt="Inventory Dashboard" class="card-image">
-                </div>
-                <div class="card-content">
-                    <div class="card-tags">
-                        <span class="tag green">Qlik Sense</span>
-                        <span class="tag grey">Logistics</span>
+            <a href="case-study-1.html" style="text-decoration: none;">
+                <div class="card">
+                    <div class="card-image-container">
+                        <img src="project2.png" alt="Inventory Dashboard" class="card-image">
                     </div>
-                    <h3 class="card-title">Inventory & Cold Chain</h3>
-                    <p class="card-desc">Tracking stock aging and freezer capacity utilization. This dashboard reduced stock storage overages by 12% through early-warning visualization alerts.</p>
+                    <div class="card-content">
+                        <div class="card-tags">
+                            <span class="tag green">Qlik Sense</span>
+                            <span class="tag blue">Snowflake</span>
+                            <span class="tag grey">Logistics</span>
+                        </div>
+                        <h3 class="card-title">Live Inventory Reporting</h3>
+                        <p class="card-desc">A Digital Twin of the Cold Storage facility. Utilizing custom Qlik SVG maps to visualize pallet density and bin capacity in real-time, optimizing forklift movement and storage utilization. Click to view full case study.</p>
+                    </div>
                 </div>
-            </div>
-
+            </a>
             <!-- PROJECT 3 -->
-            <div class="card">
-                <div class="card-image-container">
-                    <img src="project3.png" alt="Production Dashboard" class="card-image">
-                </div>
-                <div class="card-content">
-                    <div class="card-tags">
-                        <span class="tag blue">SQL</span>
-                        <span class="tag grey">Production</span>
+            <a href="case-study-3.html" style="text-decoration: none;">
+                <div class="card">
+                    <div class="card-image-container">
+                        <img src="project3.png" alt="Production Dashboard" class="card-image">
                     </div>
-                    <h3 class="card-title">Daily Production Scorecard</h3>
-                    <p class="card-desc">Monitoring daily processing volumes against labour hours. Built on a Snowflake architecture to aggregate multiple plant data sources into a single view.</p>
+                    <div class="card-content">
+                        <div class="card-tags">
+                            <span class="tag green">Qlik Sense N-Printing</span>
+                            <span class="tag grey">Documentation</span>
+                        </div>
+                        <h3 class="card-title"> NPrinting & Automated Reporting</h3>
+                        <p class="card-desc">Scaling analytics beyond the dashboard. An enterprise reporting solution delivering pixel-perfect operational reports to non-technical stakeholders, supported by rigorous governance documentation.</p>
+                    </div>
                 </div>
-            </div>
+            </a>
 
             <!-- PROJECT 4 -->
-            <div class="card">
-                <div class="card-image-container">
-                    <img src="project4.png" alt="Finance Dashboard" class="card-image">
-                </div>
-                <div class="card-content">
-                    <div class="card-tags">
-                        <span class="tag green">Qlik Sense</span>
-                        <span class="tag blue">Finance</span>
+            <a href="case-study-4.html" style="text-decoration: none;">
+                <div class="card">
+                    <div class="card-image-container">
+                        <img src="project4.png" alt="Finance Dashboard" class="card-image">
                     </div>
-                    <h3 class="card-title">Accounts Receivable Aging</h3>
-                    <p class="card-desc">Automated cash flow reporting pipeline. Replaces legacy Excel models with live Snowflake data, providing Finance teams with real-time credit risk exposure.</p>
+                    <div class="card-content">
+                        <div class="card-tags">
+                            <span class="tag blue">Snowflake</span>
+                            <span class="tag grey">Logitstics</span>
+                        </div>
+                        <h3 class="card-title">Snowflake & Streamlit</h3>
+                        <p class="card-desc">Closing the loop between Analytics and Operations. A custom Streamlit web application built on Snowflake that allows warehouse staff to generate tasks and manage picking orders directly from the floor.</p>
+                    </div>
                 </div>
-            </div>
+            </a>
 
         </div>
     </div>
 
     <footer>
-        &copy; 2023 John Smith. Built with HTML, CSS, and Data Analytics expertise.
+        &copy; 2025 Will Kong. Bachelor of Mathematics//Bachelor of Commerce from The University of Queensland. All data shown is de-identified sample data.
     </footer>
 
 </body>
+
 </html>
