--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
                 </div>
             </a>
             <!-- PROJECT 2 -->
-            <a href="case-study-1.html" style="text-decoration: none;">
+            <a href="case-study-2.html" style="text-decoration: none;">
                 <div class="card">
                     <div class="card-image-container">
-                        <img src="project2.png" alt="Inventory Dashboard" class="card-image">
+                        <img src="images/p2-main.png" alt="Inventory Dashboard" class="card-image">
                     </div>
                     <div class="card-content">
                         <div class="card-tags">
@@ -214,7 +214,7 @@
             <a href="case-study-3.html" style="text-decoration: none;">
                 <div class="card">
                     <div class="card-image-container">
-                        <img src="project3.png" alt="Production Dashboard" class="card-image">
+                        <img src="images/p3-main.png" alt="Production Dashboard" class="card-image">
                     </div>
                     <div class="card-content">
                         <div class="card-tags">
@@ -231,7 +231,7 @@
             <a href="case-study-4.html" style="text-decoration: none;">
                 <div class="card">
                     <div class="card-image-container">
-                        <img src="project4.png" alt="Finance Dashboard" class="card-image">
+                        <img src="images/p4-main.png" alt="Finance Dashboard" class="card-image">
                     </div>
                     <div class="card-content">
                         <div class="card-tags">
@@ -254,3 +254,4 @@
 </body>
 
 </html>
+
