--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <div class="portfolio-grid">
 
             <!-- PROJECT 1 -->
-            <a href="case-study-1.html" style="text-decoration: none;"> 
+            <a href="Case-study-1.html" style="text-decoration: none;"> 
                 <div class="card">
                     <div class="card-image-container">
                         <img src="images/p1-main.png" alt="Sales Dashboard" class="card-image">
@@ -194,7 +194,7 @@
                 </div>
             </a>
             <!-- PROJECT 2 -->
-            <a href="case-study-2.html" style="text-decoration: none;">
+            <a href="Case-study-2.html" style="text-decoration: none;">
                 <div class="card">
                     <div class="card-image-container">
                         <img src="images/p2-main.png" alt="Inventory Dashboard" class="card-image">
@@ -211,7 +211,7 @@
                 </div>
             </a>
             <!-- PROJECT 3 -->
-            <a href="case-study-3.html" style="text-decoration: none;">
+            <a href="Case-study-3.html" style="text-decoration: none;">
                 <div class="card">
                     <div class="card-image-container">
                         <img src="images/p3-main.png" alt="Production Dashboard" class="card-image">
@@ -228,7 +228,7 @@
             </a>
 
             <!-- PROJECT 4 -->
-            <a href="case-study-4.html" style="text-decoration: none;">
+            <a href="Case-study-4.html" style="text-decoration: none;">
                 <div class="card">
                     <div class="card-image-container">
                         <img src="images/p4-main.png" alt="Finance Dashboard" class="card-image">
@@ -254,4 +254,5 @@
 </body>
 
 </html>
+
 
