--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <a href="Case-study-1.html" style="text-decoration: none;"> 
                 <div class="card">
                     <div class="card-image-container">
-                        <img src="images/p1-main.png" alt="Sales Dashboard" class="card-image">
+                        <img src="Images/p1-main.png" alt="Sales Dashboard" class="card-image">
                     </div>
                     <div class="card-content">
                         <div class="card-tags">
@@ -197,7 +197,7 @@
             <a href="Case-study-2.html" style="text-decoration: none;">
                 <div class="card">
                     <div class="card-image-container">
-                        <img src="images/p2-main.png" alt="Inventory Dashboard" class="card-image">
+                        <img src="Images/p2-main.png" alt="Inventory Dashboard" class="card-image">
                     </div>
                     <div class="card-content">
                         <div class="card-tags">
@@ -214,7 +214,7 @@
             <a href="Case-study-3.html" style="text-decoration: none;">
                 <div class="card">
                     <div class="card-image-container">
-                        <img src="images/p3-main.png" alt="Production Dashboard" class="card-image">
+                        <img src="Images/p3-main.png" alt="Production Dashboard" class="card-image">
                     </div>
                     <div class="card-content">
                         <div class="card-tags">
@@ -231,7 +231,7 @@
             <a href="Case-study-4.html" style="text-decoration: none;">
                 <div class="card">
                     <div class="card-image-container">
-                        <img src="images/p4-main.png" alt="Finance Dashboard" class="card-image">
+                        <img src="Images/p4-main.png" alt="Finance Dashboard" class="card-image">
                     </div>
                     <div class="card-content">
                         <div class="card-tags">
@@ -254,5 +254,6 @@
 </body>
 
 </html>
+
 
 
