--- a/Case-study-2.html
+++ b/Case-study-2.html
@@ -189,7 +189,7 @@
     <!-- Header -->
     <div class="case-header">
         <h1>Commercial Sales Performance</h1>
-        <div class="case-meta">Qlik Sense | Snowflake | SQL | CSS Styling</div>
+        <div class="case-meta">Qlik Sense | Snowflake | Logistics</div>
     </div>
 
     <div class="container">
@@ -201,17 +201,17 @@
 
             <!-- SLIDE 1 (Main) -->
             <div class="slide active">
-                <img src="images/p1-main.png" alt="Main Dashboard View">
+                <img src="Images/p2-main.png" alt="Main Dashboard View">
             </div>
             
             <!-- SLIDE 2 (Detail) -->
             <div class="slide">
-                <img src="images/p1-detail1.png" alt="Drill Down View">
+                <img src="Images/p2-detail1.png" alt="Drill Down View">
             </div>
 
             <!-- SLIDE 3 (Detail) -->
             <div class="slide">
-                <img src="images/p1-detail2.png" alt="Mobile View">
+                <img src="Images/p2-detail2.png" alt="Mobile View">
             </div>
 
             <!-- Button Right -->
@@ -231,28 +231,28 @@
             <div class="star-block">
                 <span class="star-label">SITUATION</span>
                 <div class="star-text">
-                    Sales teams were relying on static monthly Excel PDFs to track margins. Data from Domestic and Export markets lived in separate silos, making it impossible to see a consolidated "Global Position" until week's end.
+                    The Cold Store facility relied on static WMS extracts to determine available storage space. "Honeycombing" (inefficient scattering of partial pallets) was common, and forklift drivers often wasted time driving to bins that were actually full.
                 </div>
             </div>
 
             <div class="star-block">
                 <span class="star-label">TASK</span>
                 <div class="star-text">
-                    My objective was to build a live, consolidated Qlik Sense dashboard sourced directly from Snowflake. The tool needed to handle 50M+ rows of transaction data while remaining responsive enough for iPads used by sales reps in the field.
+                    My objective was to create a visual "Space Management" tool to give floor managers a live view of the physical warehouse layout without needing to walk the floor.
                 </div>
             </div>
 
             <div class="star-block">
                 <span class="star-label">ACTION</span>
                 <div class="star-text">
-                    I engineered a Snowflake view to unify currency conversions and unit measurements (Lbs vs Kgs). In Qlik, I utilized Set Analysis to create dynamic "Current vs Previous Year" comparisons. I applied custom CSS (Multi-KPI) to style the objects for high readability on smaller screens, moving away from the default grid look.
+                    I mapped the physical warehouse coordinates to an SVG template in Qlik Sense. I connected this to live inventory tables in Snowflake to create a "Heatmap" overlay. I used conditional coloring to flag bins that were at <50% capacity (consolidation opportunities) or 100% capacity.
                 </div>
             </div>
 
             <div class="star-block">
                 <span class="star-label">RESULT</span>
                 <div class="star-text">
-                    The dashboard reduced reporting latency from 5 days to real-time. Sales managers identified a 4% margin leakage in the Export sector within the first week of use. Adoption rate among the sales team hit 90% within the first month.
+                    This visualization reduced "put-away" times by approximately 15% and allowed the warehouse manager to recover significant storage capacity by visually identifying consolidation targets instantly.
                 </div>
             </div>
 
@@ -290,4 +290,5 @@
     </script>
 
 </body>
+
 </html>
