--- a/Case-study-3.html
+++ b/Case-study-3.html
@@ -188,8 +188,8 @@
 
     <!-- Header -->
     <div class="case-header">
-        <h1>Commercial Sales Performance</h1>
-        <div class="case-meta">Qlik Sense | Snowflake | SQL | CSS Styling</div>
+        <h1>NPrinting & Automated Reporting</h1>
+        <div class="case-meta">Qlik Sense N-Printing | Documentation</div>
     </div>
 
     <div class="container">
@@ -201,17 +201,17 @@
 
             <!-- SLIDE 1 (Main) -->
             <div class="slide active">
-                <img src="images/p1-main.png" alt="Main Dashboard View">
+                <img src="Images/p3-main.png" alt="Main Dashboard View">
             </div>
             
             <!-- SLIDE 2 (Detail) -->
             <div class="slide">
-                <img src="images/p1-detail1.png" alt="Drill Down View">
+                <img src="Images/p3-detail1.png" alt="Drill Down View">
             </div>
 
             <!-- SLIDE 3 (Detail) -->
             <div class="slide">
-                <img src="images/p1-detail2.png" alt="Mobile View">
+                <img src="Images/p3-detail2.png" alt="Mobile View">
             </div>
 
             <!-- Button Right -->
@@ -231,28 +231,27 @@
             <div class="star-block">
                 <span class="star-label">SITUATION</span>
                 <div class="star-text">
-                    Sales teams were relying on static monthly Excel PDFs to track margins. Data from Domestic and Export markets lived in separate silos, making it impossible to see a consolidated "Global Position" until week's end.
+                     While analysts love dashboards, operational staff and external partners required static, high-fidelity PDFs. Manual compilation of these reports was consuming 10+ hours of analyst time per week and lacked standardization.
                 </div>
             </div>
 
             <div class="star-block">
                 <span class="star-label">TASK</span>
                 <div class="star-text">
-                    My objective was to build a live, consolidated Qlik Sense dashboard sourced directly from Snowflake. The tool needed to handle 50M+ rows of transaction data while remaining responsive enough for iPads used by sales reps in the field.
-                </div>
+                     Implement an automated NPrinting solution to distribute complex reports while establishing a governance framework to ensure documentation and maintainability.
             </div>
 
             <div class="star-block">
                 <span class="star-label">ACTION</span>
                 <div class="star-text">
-                    I engineered a Snowflake view to unify currency conversions and unit measurements (Lbs vs Kgs). In Qlik, I utilized Set Analysis to create dynamic "Current vs Previous Year" comparisons. I applied custom CSS (Multi-KPI) to style the objects for high readability on smaller screens, moving away from the default grid look.
+                    I designed complex NPrinting templates that aggregated data from multiple Qlik Sense apps. Crucially, I wrote the standard operating procedure (SOP) and technical documentation for the reporting ecosystem, ensuring that any analyst could troubleshoot or update the reports without dependency on a single person.
                 </div>
             </div>
 
             <div class="star-block">
                 <span class="star-label">RESULT</span>
                 <div class="star-text">
-                    The dashboard reduced reporting latency from 5 days to real-time. Sales managers identified a 4% margin leakage in the Export sector within the first week of use. Adoption rate among the sales team hit 90% within the first month.
+                    Automated the distribution of daily operational reports to over 100 stakeholders. The accompanying documentation reduced the onboarding time for new team members by providing a clear "Knowledge Base" for the reporting logic.
                 </div>
             </div>
 
@@ -290,4 +289,5 @@
     </script>
 
 </body>
+
 </html>
