--- a/Case-study-2.html
+++ b/Case-study-2.html
@@ -188,7 +188,7 @@
 
     <!-- Header -->
     <div class="case-header">
-        <h1>Commercial Sales Performance</h1>
+        <h1>Live Inventory Reporting</h1>
         <div class="case-meta">Qlik Sense | Snowflake | Logistics</div>
     </div>
 
@@ -292,3 +292,4 @@
 </body>
 
 </html>
+
