--- a/Case-study-3.html
+++ b/Case-study-3.html
@@ -239,6 +239,7 @@
                 <span class="star-label">TASK</span>
                 <div class="star-text">
                      Implement an automated NPrinting solution to distribute complex reports while establishing a governance framework to ensure documentation and maintainability.
+                </div>
             </div>
 
             <div class="star-block">
@@ -291,3 +292,4 @@
 </body>
 
 </html>
+
