--- a/Case-study-4.html
+++ b/Case-study-4.html
@@ -232,6 +232,7 @@
                 <span class="star-label">SITUATION</span>
                 <div class="star-text">
                     There was a disconnect between the data warehouse (what we thought we had) and the physical floor (what was actually there). Qlik is great for reading data, but we lacked a tool for users to "Write Back" or generate tasks based on that data.
+                </div>
             </div>
 
             <div class="star-block">
@@ -291,3 +292,4 @@
 </body>
 
 </html>
+
