--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
             gap: 40px;
         }
 
+        .portfolio-grid a {
+            text-decoration: none;
+            display: flex;       /* This makes the link a container */
+            height: 100%;        /* Forces it to fill the grid row height */
+        }
+
         @media (max-width: 768px) {
             .portfolio-grid {
                 grid-template-columns: 1fr; /* Stack on mobile */
@@ -87,6 +93,9 @@
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             display: flex;
             flex-direction: column;
+
+            height: 100%; 
+            width: 100%; 
         }
 
         .card:hover {
@@ -253,6 +262,7 @@
 </body>
 
 </html>
+
 
 
 
