--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     <div class="card-content">
                         <div class="card-tags">
                             <span class="tag blue">Snowflake</span>
-                            <span class="tag grey">Logitstics</span>
+                            <span class="tag grey">Logistics</span>
                         </div>
                         <h3 class="card-title">Snowflake & Streamlit</h3>
                         <p class="card-desc">Closing the loop between Analytics and Operations. A custom Streamlit web application built on Snowflake that allows warehouse staff to generate tasks and manage picking orders directly from the floor.</p>
@@ -262,6 +262,7 @@
 </body>
 
 </html>
+
 
 
 
